included QuickStart.scala in the scala test.